language/move-lang/tests/move_check/parser/use_with_module.exp
error: 

   ┌── tests/move_check/parser/use_with_module.move:3:1 ───
   │
 3 │ module M {
   │ ^^^^^^ Unrecognized Token: module
   ·
 3 │ module M {
   │ ------ Expected:  a name value
   │

